fix: changed method return type in repository layer from Optional<list> to list